agregando dependencia exportar