@@ -91,6 +91,12 @@
         <artifactId>postgresql</artifactId>
         <version>42.0.0</version>
 	</dependency>
+	
+	<dependency> 		
+             <groupId>org.apache.poi</groupId> 		
+             <artifactId>poi-ooxml</artifactId> 		
+             <version>4.0.0</version> 		
+         </dependency> 
 
 	<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
 	<dependency>
@@ -205,6 +211,16 @@
 
                 </executions>
             </plugin>
+            
+            <plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-surefire-plugin</artifactId>
+ 			 <configuration>
+  			  <forkCount>3</forkCount>
+  			  <reuseForks>true</reuseForks>
+   			 <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+ 			 </configuration>
+			</plugin>
 
 	<!-- Jacoco embedded plugin. -->
 	<plugin>
